Add database date

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,12 @@
 <head>
 	<style type="text/css">
 		h1 {
-			margin-bottom: 1rem;
 			margin-top: 0;
+			margin-bottom: 0;
+		}
+
+		#heading {
+			margin-bottom: 1rem;
 		}
 
 		.error {
@@ -35,7 +39,10 @@
 	</style>
 </head>
 
-<h1>Tempus map recommendations</h1>
+<div id="heading">
+	<h1>Tempus map recommendations</h1>
+	<span>Database date (yyyy-mm-dd): 2020-01-08</span>
+</div>
 
 <span>Player id</span>
 <input id="player-id" type="number" min="0" value="0" />
