Relative url fixes for gh pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,47 @@
 <!doctype html>
 
-<title>Tempus map recommendations</title> 
-<meta charset=utf-8> 
+<title>Tempus map recommendations</title>
+<meta charset=utf-8>
 
 <head>
-	<style type="text/css">
-		h1 {
-			margin-top: 0;
-			margin-bottom: 0;
-		}
+    <style type="text/css">
+        h1 {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
 
-		#heading {
-			margin-bottom: 1rem;
-		}
+        #heading {
+            margin-bottom: 1rem;
+        }
 
-		.error {
-			color: red;
-		}
+        .error {
+            color: red;
+        }
 
-		#class-id {
-			margin-left: 1.5rem;
-			width: 6rem;
-		}
+        #class-id {
+            margin-left: 1.5rem;
+            width: 6rem;
+        }
 
-		#player-id {
-			margin-left: 0.1rem;
-			width: 6rem;
-		}
+        #player-id {
+            margin-left: 0.1rem;
+            width: 6rem;
+        }
 
-		button {
-			min-width: 5rem;
-			min-height: 2.5rem;
-			cursor: pointer;
-			margin-left: 3.9rem;
-			margin-top: 1rem;
-			margin-bottom: 1rem;
-		}
-	</style>
+        button {
+            min-width: 5rem;
+            min-height: 2.5rem;
+            cursor: pointer;
+            margin-left: 3.9rem;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
+    </style>
 </head>
 
 <div id="heading">
-	<h1>Tempus map recommendations</h1>
-	<span>Database date (yyyy-mm-dd): {{date}}</span>
+    <h1>Tempus map recommendations</h1>
+    <span>Database date (yyyy-mm-dd): {{date}}</span>
 </div>
 
 <span>Player id</span>
@@ -51,8 +51,8 @@
 
 <span>Class</span>
 <select id="class-id">
-	<option selected="true" value="3">Soldier</option>
-	<option value="4">Demoman</option>
+    <option selected="true" value="3">Soldier</option>
+    <option value="4">Demoman</option>
 </select>
 
 <br />
@@ -61,27 +61,31 @@
 
 <div id="result">
     {% for err in errors %}
-        <span class="error">{{err}}</span><br />
+    <span class="error">{{err}}</span><br />
     {% endfor %}
-	{% for rec in recommendations %}
-        <span>{{rec["name"]}} - {{rec["value"]}}</span><br />
+    {% for rec in recommendations %}
+    <span>{{rec["name"]}} - {{rec["value"]}}</span><br />
     {% endfor %}
 </div>
 
 <script>
-	var playerId = document.querySelector('#player-id').value;
-	var classId = document.querySelector('#class-id').value;
+    var playerId = document.querySelector('#player-id').value;
+    var classId = document.querySelector('#class-id').value;
 
-	document.querySelector('#player-id').addEventListener('change', (event) => {
-		playerId = event.target.value;
-	});
+    document.querySelector('#player-id').addEventListener('change', (event) => {
+        playerId = event.target.value;
+    });
 
-	document.querySelector('#class-id').addEventListener('change', (event) => {
-		classId = event.target.value;
-	});
+    document.querySelector('#class-id').addEventListener('change', (event) => {
+        classId = event.target.value;
+    });
 
-	document.querySelector('#submit').addEventListener('click', (event) => {
-		event.preventDefault();
-		window.location.href=`/recommend/${playerId}/${classId}`
-	});
+    document.querySelector('#submit').addEventListener('click', (event) => {
+        event.preventDefault();
+        if (window.location.href.includes("/recommend/")) {
+            window.location.href = `../../${playerId}/${classId}`;
+        } else {
+            window.location.href = `./recommend/${playerId}/${classId}`;
+        }
+    });
 </script>
