Add player id instructions

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,10 @@
 
 <div id="heading">
     <h1>Tempus map recommendations</h1>
-    <span>Database date (yyyy-mm-dd): {{date}}</span>
+    <span>Database date (yyyy-mm-dd): {{date}}</span><br />
+    <span>You can find your player id by looking up your profile on tempus, e.g. <a target="_blank"
+            rel="noreferrer noopener"
+            href="https://tempus.xyz/players/52080">https://tempus.xyz/players/52080</a></span>
 </div>
 
 <span>Player id</span>
