--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,6 @@
 <div id="heading">
     <h1>Tempus map recommendations</h1>
     <span>Database date {{date}} (yyyy-mm-dd)</span><br />
-    <span>For player specific recommendations, see <a href="/player">/player.</a></span><br />
-    <span>For map similarity recommendations, see <a href="/map">/map.</a></span>
+    <span>For player specific recommendations, see <a href="/player/">/player.</a></span><br />
+    <span>For map similarity recommendations, see <a href="/map/">/map.</a></span>
 </div>
