--- a/templates/map.html
+++ b/templates/map.html
@@ -43,17 +43,17 @@
     <h1>Tempus map recommendations</h1>
     <span>Database date {{date}} (yyyy-mm-dd)</span><br />
     <span>Insert a valid map name and class to get similar recommendations.</span><br />
-    <span><a href="/">&lt;-- Back to index</a></span>
+    <span><a href="{{to_index}}">&lt;-- Back to index</a></span>
 </div>
 
 <span>Map name</span>
-<input id="map-name" type="text" value="jump_beef" />
+<input id="map-name" type="text" value="{{map_name}}" />
 
 <br />
 
 <span>Class</span>
 <select id="class-id">
-    <option selected="true" value="3">Soldier</option>
+    <option value="3">Soldier</option>
     <option value="4">Demoman</option>
 </select>
 
@@ -78,12 +78,5 @@
         window.location.pathname = `/map/${mapName}/${classId}`;
     });
 
-    // assign current url values
-    let parts = window.location.pathname.split("/");
-    if (parts.length > 2) {
-        document.querySelector('#map-name').value = parts[2];
-    }
-    if (parts.length > 3) {
-        document.querySelector('#class-id').value = parts[3];
-    }
+    document.querySelector('#class-id').value = "{{class_id}}";
 </script>
